Fixed username in html class problem in experts/status/people

--- a/tigacrafting/templates/tigacrafting/expert_status.html
+++ b/tigacrafting/templates/tigacrafting/expert_status.html
@@ -53,11 +53,11 @@
 
             <br>
 
-             <p><a role="button" data-toggle="collapse" href="#current_status_collapse_pending{{ user.username }}"
+             <p><a role="button" data-toggle="collapse" href="#current_status_collapse_pending{{ user.userstat.username_nopoint }}"
                aria-expanded="false" aria-controls="current_status_collapse_pending{{ user.username }}"><i
                     class="fa fa-plus-square-o"></i></a> <strong>Pending Reports</strong> <span class="badge">{{ user.userstat.n_pending_annotations }}</span></p>
 
-            <div class="collapse" id="current_status_collapse_pending{{ user.username }}">
+            <div class="collapse" id="current_status_collapse_pending{{ user.userstat.username_nopoint }}">
                 <div class="well">
                     <div class="table-responsive">
         <table class="table table-condensed borderless" style="font-size: smaller;">
@@ -85,11 +85,11 @@
                 </div>
             </div>
 
-        <p><a role="button" data-toggle="collapse" href="#current_status_collapse_complete{{ user.username }}"
+        <p><a role="button" data-toggle="collapse" href="#current_status_collapse_complete{{ user.userstat.username_nopoint }}"
                aria-expanded="false" aria-controls="current_status_collapse_complete{{ user.username }}"><i
                     class="fa fa-plus-square-o"></i></a> <strong>Complete Reports</strong> <span class="badge">{{ user.userstat.n_completed_annotations }}</span></p>
 
-            <div class="collapse" id="current_status_collapse_complete{{ user.username }}">
+            <div class="collapse" id="current_status_collapse_complete{{ user.userstat.username_nopoint }}">
                 <div class="well">
         <table class="table table-condensed borderless" style="font-size: smaller;">
             <thead>
