--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -1241,6 +1241,8 @@
             }
             */
 
+            //inputToCategorySelectionRevise(form_id,data.category_struct);
+
             $("#id_form-" + id_to_index[form_id] + "-status").selectpicker('val',data.status);
 
             var user_note_clean_text = clean_text(data.user_note);
@@ -1293,6 +1295,38 @@
         function inputToUserMessageValue(input_id){
             var message = getUserMessage(input_id);
             $("#message_to_user_" + input_id).val(message);
+        }
+
+        function inputToCategorySelectionRevise(input_id,data){
+            var category = data.category_id;
+            var value = data.value;
+            var complex = data.complex_id;
+            //var other = $('#id_form-' + id_to_index[input_id] + '-other_species').val();
+            var species_categories = [];
+            {% for cat in category_list %}
+                {% if cat.specify_certainty_level %}
+                    species_categories.push('{{ cat.id }}');
+                {% endif %}
+            {% endfor %}
+            if( category == "8" ){ //complex
+                $('#container_mix_' + input_id).show();
+                $('#container_value_' + input_id).hide();
+                $('#container_other_' + input_id).hide();
+                $('#complex_' + input_id).val(complex);
+            }else if ( category == "2" ){ //other species
+                $('#container_mix_' + input_id).hide();
+                $('#container_value_' + input_id).hide();
+                $('#container_other_' + input_id).show();
+                //$('#other_' + input_id).val(other);
+            }else if ( species_categories.indexOf(category) >= 0 ){
+                $('#container_value_' + input_id).show();
+                $('#container_mix_' + input_id).hide();
+                $('#categoryvalue_' + input_id).selectpicker("val",value);
+                $('#category_' + input_id).selectpicker("val",category);
+            }else{
+                $('#container_mix_' + input_id).hide();
+                $('#container_value_' + input_id).hide();
+            }
         }
 
         function inputToCategorySelection(input_id){
@@ -1546,6 +1580,7 @@
                     score: {{form.instance.report.get_final_combined_expert_score}},
                     //category: '{{form.instance.report.get_final_combined_expert_category}}',
                     category: '{{form.instance.report.get_final_combined_expert_category_euro}}',
+                    category_struct: {{form.instance.report.get_final_combined_expert_category_euro_struct_json | safe}},
                     //selector_data : {{ form.instance.report.get_selector_data | safe }},
                     status: {{form.instance.report.get_final_expert_status }},
                     photo: '{{form.instance.report.get_final_photo_html.id}}',
