--- a/tigacrafting/templates/tigacrafting/expert_report_status.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_status.html
@@ -1,11 +1,9 @@
-{% load staticfiles %}
+{% load static %}
 {% load leaflet_tags %}
 {% load i18n %}
 {% load floppyforms %}
-
-
 <!DOCTYPE html>
-<html lang={% block language %}"en"{% endblock %}>
+<html lang={% block language %} "en" {% endblock %}>
 <head>
 
     {% block encoding %}
@@ -90,6 +88,11 @@
     </script>
 {% endblock %}
 
+{% block js %}
+{% endblock %}
+
+{% block css %}
+{% endblock %}
 </head>
 
 <body>
@@ -612,6 +615,9 @@
 
 
     </script>
+
+    {% block extra_js %}
+    {% endblock %}
 
 
 </body>
