--- a/stats/templates/stats/user_ranking.html
+++ b/stats/templates/stats/user_ranking.html
@@ -25,6 +25,16 @@
     </head>
     <body>
         <div class="container">
+            <div class="row content">
+                <div class="col-xs-12">
+                    <p>{% trans 'user_ranking_info_text_1' %}</p>
+                    <!--<p>Consulta tu puntuación y nivel adquirido. En el menú ajustes encontrarás información detallada sobre el sistema de puntuación de Mosquito Alert.</p>-->
+                </div>
+                <div class="col-xs-12">
+                    <p>{% trans 'user_ranking_info_text_2' %} <a href="{{ info_url }}">{% trans 'user_ranking_info_text_3' %}</a></p>
+                    <!--<p>Más info sobre la <a href="{{ info_url }}">puntuación</a></p>-->
+                </div>
+            </div>
             {% if user_id %}
                 <div class="row content controls">
                     {{ pagination.start }} - {{ pagination.end }} of {{ pagination.total }}
