--- a/stats/templates/stats/user_ranking.html
+++ b/stats/templates/stats/user_ranking.html
@@ -81,7 +81,7 @@
             {% for row in data %}
             {% if row.user_uuid == user_id %}
             <div class="row content">
-                <p>This is you!</p>
+                <p class="badge badge-error">{% trans 'This is you!' %}</p>
             </div>
             {% endif %}
             <div id="{{ row.user_uuid }}" class="row content clickable size-4 {% if row.user_uuid == user_id %} mine pulse {% endif %}">
@@ -92,7 +92,7 @@
             </div>
             <div id="hidden_{{ row.user_uuid }}" class="row content info" style="display:none;">
                 <div class="col-xs-12">
-                    <div id="progress_{{ row.user_uuid }}" class="row loading">Loading data ...</div>
+                    <div id="progress_{{ row.user_uuid }}" class="row loading"></div>
                     <div id="detail_{{ row.user_uuid }}">
                         <!--
                         <div class="row">
@@ -118,7 +118,7 @@
                         </div>
                         -->
                     </div>
-                    <a href={% url "stats_user_score" row.user_uuid %} target="_blank">link!</a>
+                    <a id="moreinfo_{{ row.user_uuid }}" class="badge badge-info" style="font-size:16px;display:none;" href={% url "stats_user_score" row.user_uuid %} target="_blank">{% trans 'Score details' %}</a>
                 </div>
             </div>
             <hr>
