--- a/tigahelp/templates/tigahelp/scoring_es.html
+++ b/tigahelp/templates/tigahelp/scoring_es.html
@@ -14,15 +14,15 @@
 
     <p>Los puntos máximos que se pueden obtener por informe son:</p>
     <ul>
-        <li>Mosquito <em>Aedes</em> invasor: 20 XP</li>
-        <li>Mosquito común: 14 XP</li>
-        <li>Lugar de cría imbornal: 20 XP</li>
-        <li>Otro lugar de cría en la vía pública: 16 XP</li>
+        <li>Mosquito <em>Aedes</em> invasor: 20 puntos</li>
+        <li>Mosquito común: 14 puntos</li>
+        <li>Lugar de cría imbornal: 20 puntos</li>
+        <li>Otro lugar de cría en la vía pública: 16 puntos</li>
     </ul>
 
     <p>Además existen bonificaciones extra por el primer mosquito de la temporada, primer informe del día o por participar con frecuencia.</p>
 
-    <p>Aquellos informes que se envíen como mosquito pero resultan no ser mosquitos no obtendrán puntos. Igual que tampoco se puntuará una foto que no permita identificar lo que aparece en ella.</p>
+    <p>Aquellos informes que se envíen como mosquito pero resulten no ser mosquitos, según la validación experta, no obtendrán puntos. Tampoco se puntuará una foto que no permita identificar el mosquito o lugar de cría.</p>
 
     <p>La acumulación de puntos te permitirá ir ascendiendo de <b>nivel</b>:</p>
     <ul>
@@ -33,17 +33,17 @@
         <li>(5) gran maestro (grandmaster)</li>
     </ul>
 
-    <p>Unos iconos indican en todo momento el nivel en que te encuentras.</p>
+    <p>Estos iconos indican el nivel alcanzado:</p>
 
     <img src="{% static "tigahelp/InfoScoring_half.png" %}" width="100%">
 
-    <h2>Tu panel de puntos</h2>
+    <h2>Panel de puntos</h2>
 
-    <p>Pulsando el botón con los puntos de la pantalla principal podrás acceder al ranking donde verás en qué posición te sitúas. Si haces clic sobre tu posición se desplegará una tabla desglosada con tus puntos.</p>
+    <p>Se accede al ránking global haciendo clic sobre la puntuación en la pantalla principal. Presionando sobre una posición del ránking se despliega el desglose de puntos obtenidos por el usuario.</p>
 
-    <p>Sigue el enlace que hay al final de la tabla (link!) que te llevará a tu panel de puntos.</p>
+    <p>Haciendo clic en “Más detalles” se accede al panel de puntos desglosado.</p>
 
-    <p>Aquí encontrarás una lista de los informes enviados con la puntuación obtenida en cada uno de ellos. Los informes son interactivos, clicando en uno verás la puntuación desglosada y el porqué de la puntuación.</p>
+    <p>En este apartado hay una lista de los informes enviados con la puntuación obtenida en cada uno de ellos. Los informes son interactivos, al clicar se obtiene la puntuación desglosada y el porqué de la puntuación.</p>
 
 {% endblock %}
 
