--- a/tigahelp/templates/tigahelp/scoring_ca.html
+++ b/tigahelp/templates/tigahelp/scoring_ca.html
@@ -9,21 +9,21 @@
 {% block content %}
 
     <h1>INFO PUNTUACIÓ</h1>
-    Les accions realitzades a Mosquito Alert ténen reconeixement i recompensa en forma de punts. El nombre de punts per informe varia en funció de la informació aportada i de la seva qualitat.
+    <p>Les accions realitzades a Mosquito Alert ténen reconeixement i recompensa en forma de punts. El nombre de punts per informe varia en funció de la informació aportada i de la seva qualitat.</p>
 
     <p>Els punts màxims que es poden obtenir per informe són:</p>
     <ul>
-        <li>Mosquit <em>Aedes</em> invasor: 20 XP</li>
-        <li>Mosquit comú: 14 XP</li>
-        <li>Lloc de cria embornal: 20 XP</li>
-        <li>Un altre lloc de cria en la via pública: 16 XP</li>
+        <li>Mosquit <em>Aedes</em> invasor: 20 punts</li>
+        <li>Mosquit comú: 14 punts</li>
+        <li>Lloc de cria embornal: 20 punts</li>
+        <li>Un altre lloc de cria en la via pública: 16 punts</li>
     </ul>
 
     <p>A més existeixen bonificacions extra pel primer mosquit de la temporada, primer informe del dia o per participar amb freqüència.</p>
 
-    <p>Aquells informes que s'enviïn com a mosquit però resulten no ser mosquits no obtindran punts. Igual que tampoc es puntuarà una foto que no permet identificar el que hi apareix.</p>
+    <p>Aquells informes que s'enviïn com a mosquit però resultin no ser mosquits, segons la validació experta, no obtindran punts. Igual que tampoc es puntuarà una foto que no permet identificar el mosquit o lloc de cria.</p>
 
-    <p>L'acumulació de punts et permetrà anar ascendint de nivell:</p>
+    <p>L'acumulació de punts et permetrà anar ascendint de <strong>nivell</strong>:</p>
     <ul>
         <li>(1) principiant (novice)</li>
         <li>(2) col·laborador (contributor)</li>
@@ -32,17 +32,17 @@
         <li>(5) gran mestre (grandmaster)</li>
     </ul>
 
-    <p>Unes icones indiquen en tot moment el <b>nivell</b> en què et trobes.</p>
+    <p>Aquestes icones indiquen el nivell assolit:</p>
 
     <img src="{% static "tigahelp/InfoScoring_half.png" %}" width="100%">
 
-    <h2>El teu panell de punts</h2>
+    <h2>Panell de punts</h2>
 
-    <p>Pitjant el botó amb els punts de la pantalla principal podràs accedir al rànquing on veuràs en quina posició et situes. Si fas clic sobre la teva posició es desplegarà una taula desglossada amb els teus punts.</p>
+    <p>S’accedeix al rànquing global fent clic sobre la puntuació en la pantalla principal. Pressionat sobre una posició del rànquing es desplega el desglossament de punts obtinguts per l’usuari.</p>
 
-    <p>Segueix l'enllaç que hi ha al final de la taula (link!) que et portarà al teu panell de punts.</p>
+    <p>Fent clic en “Més detalls” s’accedeix al panell de punts desglossat.</p>
 
-    <p>Aquí trobaràs una llista dels informes enviats amb la puntuació obtinguda en cadascun d'ells. Els informes són interactius, clicant en un veuràs la puntuació desglossada i el perquè de la puntuació.</p>
+    <p>En aquest apartat hi ha una llista dels informes enviats amb la puntuació obtinguda en cadascun d’ells. Els informes són interactius, en clicar s’obté la puntuació detallada i el perquè de la puntuació.</p>
 
 {% endblock %}
 
