Fixed couple bugs entolab

--- a/tigahelp/templates/tigahelp/policies.html
+++ b/tigahelp/templates/tigahelp/policies.html
@@ -35,7 +35,7 @@
                 {% trans 'privacy-policy'  %}</a>
         </p>
         <p>
-            <a class="pure-button pure-button-primary" style="min-width:50%;" href="#">{% trans 'app-license'  %}</a>
+            <a class="pure-button pure-button-primary" style="min-width:50%;" href="{% url 'help.show_app_license' %}">{% trans 'app-license'  %}</a>
         </p>
     </div>
 </div>
