Latest text additions to map, info buttons and landing popup

--- a/tigapublic/static/tigapublic/css/map.css
+++ b/tigapublic/static/tigapublic/css/map.css
@@ -674,7 +674,7 @@ div#map canvas.leaflet-heatmap-layer {
 .question-mark-toc {
   position: absolute;
 	min-width: 5%;
-  /* right: 6px; */
+  right: 6px;
 	margin-left:5px;
 	top: 10px;
   border: 1px solid #cacaca;
