Changed about us en

--- a/tigahelp/templates/tigahelp/about_us_en.html
+++ b/tigahelp/templates/tigahelp/about_us_en.html
@@ -8,18 +8,18 @@
 {% block content %}
 
     <h2>Coordinating Entities</h2>
-    <p>Mosquito Alert is directed by different public research institutions: the <em>Centre d'Estudis Avançats de Blanes</em> of <em>Consejo Superior de Investigaciones Científicas</em> <strong>(CEAB-CSIC)</strong>, the <em>Centre de Recerca Ecològica i Aplicacions Forestals</em> <strong>(CREAF)</strong> and <em>Universitat Pompeu Fabra</em> <strong>(UPF)</strong>. The <em>Institució Catalana de Recerca i Estudis Avançats</em> <strong>(ICREA)</strong> also participates in this project.</p>
+    <p>Mosquito Alert is led by the following public research institutions: the <em>Spanish National Research Council’s Center for Advanced Studies of Blanes</em> (<strong>CEAB-CSIC</strong>), the <em>Center for Ecological Research and Forestry Applications</em> (<strong>CREAF</strong>) and <em>Pompeu Fabra University</em> (<strong>UPF</strong>). The <em>Catalan Institution for Research and Advanced Studies</em> (<strong>ICREA</strong>) also participates.</p>
     <p class="centeredImage">
         <img style="max-width: 100%; height: auto;" src="{% static "tigahelp/colaboradors_about_us.jpg" %}">
     </p>
 
-    <h2>Col·laboradors</h2>
-    <p>Mosquito Alert és possible també gràcies a la participació de diferents persones expertes (professional que, per exemple, validin les dades ciutadanes), i entitats de varis països que treballen en l'àmbit de la salut pública, el control d'espècies invasores o entitats d'educació ambiental.</p>
+    <h2>Collaborators</h2>
+    <p>Mosquito Alert is made possible also thanks to the participation of a number of experts (professionals who, for example, validate citizen scientists’ data), and entities from various countries working in the field of public health, invasive species control, and environmental education.</p>
 
-    <h2>Financiació i participació a projectes</h2>
-    <p>Mosquito Alert participa a projectes competitius de recerca, comunicació científica i divulgació (Plan Nacional estatal, Horitzó 2020 de la Unió Europea, Obra Social la Caixa entre d'altres), i es financia també amb l'aportació de recursos de les entitats que lideren el projecte i entitats col·laboradores</p>
+    <h2>Financing and participation in projects</h2>
+    <p>Mosquito Alert participates in competitive projects for research, scientific communication dissemination (including the Spanish <em>Plan Estal</em>, the EU’s Horizon 2020 funding line, and “la Caixa” Foundation projects, among others). Mosquito Alert also relies on contributions of resources from the leading and collaborating entities.</p>
 
-    Més informació sobre entitats, col·laboracions i projectes a <a href="www.mosquitoalert.com">www.mosquitoalert.com</a> i xarxes socials.
+    More information on entities, collaborations and projects can be found at <a href="www.mosquitoalert.com">www.mosquitoalert.com</a> and on social networks.
 
     <p class="centeredImage">Banner web/logo</p>
 
