About us and project_about first version

--- a/tigahelp/templates/tigahelp/about_us_ca.html
+++ b/tigahelp/templates/tigahelp/about_us_ca.html
@@ -19,8 +19,9 @@
     <h2>Financiació i participació a projectes</h2>
     <p>Mosquito Alert participa a projectes competitius de recerca, comunicació científica i divulgació (Plan Nacional estatal, Horitzó 2020 de la Unió Europea, Obra Social la Caixa entre d'altres), i es financia també amb l'aportació de recursos de les entitats que lideren el projecte i entitats col·laboradores</p>
 
-    Més informació sobre entitats, col·laboracions i projectes a <a href="www.mosquitoalert.com">www.mosquitoalert.com</a> i xarxes socials.
+    <p>Més informació sobre entitats, col·laboracions i projectes a <a href="www.mosquitoalert.com">www.mosquitoalert.com</a> i xarxes socials.</p>
 
-    <p class="centeredImage">Banner web/logo</p>
+    <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
+
 
 {% endblock %}
