--- a/tigahelp/templates/tigahelp/about_us_en.html
+++ b/tigahelp/templates/tigahelp/about_us_en.html
@@ -19,8 +19,8 @@
     <h2>Financing and participation in projects</h2>
     <p>Mosquito Alert participates in competitive projects for research, scientific communication dissemination (including the Spanish <em>Plan Estal</em>, the EU’s Horizon 2020 funding line, and “la Caixa” Foundation projects, among others). Mosquito Alert also relies on contributions of resources from the leading and collaborating entities.</p>
 
-    More information on entities, collaborations and projects can be found at <a href="www.mosquitoalert.com">www.mosquitoalert.com</a> and on social networks.
+    <p>More information on entities, collaborations and projects can be found at <a href="www.mosquitoalert.com">www.mosquitoalert.com</a> and on social networks.</p>
 
-    <p class="centeredImage">Banner web/logo</p>
+    <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
 {% endblock %}
