--- a/tigahelp/templates/tigahelp/about_us_es.html
+++ b/tigahelp/templates/tigahelp/about_us_es.html
@@ -19,8 +19,8 @@
     <h2>Financiación y participación en proyectos</h2>
     <p>Mosquito Alert participa en proyectos competitivos de investigación, comunicación científica y divulgación (Plan Nacional estatal, Horizonte 2020 de la Unión Europea, Obra Social la Caixa, entre otros), y se financia también con la aportación de recursos de las entidades que lideran el proyecto y entidades colaboradoras.</p>
 
-    Más información sobre entidades, colaboraciones y proyectos en <a href="www.mosquitoalert.com">www.mosquitoalert.com</a> y redes sociales.
+    <p>Más información sobre entidades, colaboraciones y proyectos en <a href="www.mosquitoalert.com">www.mosquitoalert.com</a> y redes sociales.</p>
 
-    <p class="centeredImage">Banner web/logo</p>
+    <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
 {% endblock %}
