Latest versions of scoring and project_about

--- a/tigahelp/templates/tigahelp/project_about_es.html
+++ b/tigahelp/templates/tigahelp/project_about_es.html
@@ -7,7 +7,7 @@
 
 
 {% block content %}
-    <div class='main_container'>
+<div class='main_container'>
 
     <div class='text_container'>
 
@@ -35,7 +35,7 @@
 
     <h2>¿Por qué es necesario Mosquito Alert?</h2>
 
-    <p>En las últimas décadas el número de mosquitos invasores y de enfermedades emergentes transmitidas por mosquitos ha aumentado a escala global. Nuevas especies invasoras, principalmente del género (<em>Aedes(</em>, se han establecido en nuevas áreas y siguen en expansión. Estos mosquitos ((<em>Aedes(</em>) son de importancia sanitaria por su capacidad de transmitir enfermedades como el dengue, el Zika o la chikungunya, mientras que el mosquito común ((<em>Culex pipiens(</em>) cobra importancia por poder transmitir el virus de la fiebre del Nilo Occidental. El riesgo que suponen para la salud pública requiere una vigilancia de sus poblaciones.</p>
+    <p>En las últimas décadas el número de mosquitos invasores y de enfermedades emergentes transmitidas por mosquitos ha aumentado a escala global. Nuevas especies invasoras, principalmente del género <em>Aedes</em>, se han establecido en nuevas áreas y siguen en expansión. Estos mosquitos (<em>Aedes</em>) son de importancia sanitaria por su capacidad de transmitir enfermedades como el dengue, el Zika o la chikungunya, mientras que el mosquito común (<em>Culex pipiens</em>) cobra importancia por poder transmitir el virus de la fiebre del Nilo Occidental. El riesgo que suponen para la salud pública requiere una vigilancia de sus poblaciones.</p>
 
 
 <p>Conscientes de la complejidad del problema, Mosquito Alert permite abrir la vigilancia e investigación de estos mosquitos a la ciudadanía y permite la colaboración entre distintos agentes, a través de su app y resto de plataformas y comunidades.</p>
@@ -47,7 +47,6 @@
 
 
 <p class="centeredImage">
-
 
         <img style="max-width: 100%; height: auto;" src="{% static "tigahelp/Mosquitos.jpg" %}">
 
@@ -91,7 +90,7 @@
 </ul>
 
 
-<h2>¿Dónde puedo encontrar más información?</h2>
+<h2>¿Dónde puedo encontrar más información</h2>
 
 <p>Encontrarás más información en la página web del proyecto y en las redes sociales.</p>
 
