--- a/tigahelp/templates/tigahelp/scoring_es.html
+++ b/tigahelp/templates/tigahelp/scoring_es.html
@@ -8,42 +8,85 @@
 
 {% block content %}
 
-    <h1>INFO PUNTUACIÓN</h1>
+    <div class='main_container'>
 
-    <p>Las acciones realizadas en Mosquito Alert tienen reconocimiento y recompensa en forma de puntos. El número de puntos por informe varía en función de la información aportada y de su calidad. </p>
+    <div class='text_container'>
+
+
+        <div class="center">
+
+            <h1></h1>
+
+        </div>
+
+
+    <h2>INFO PUNTUACIÓN</h2>
+
+
+    <p>Las acciones realizadas en Mosquito Alert tienen reconocimiento y recompensa en forma de puntos. El número de puntos por informe varía en función de la información aportada y de su calidad.</p>
+
 
     <p>Los puntos máximos que se pueden obtener por informe son:</p>
+
     <ul>
+
         <li>Mosquito <em>Aedes</em> invasor: 20 puntos</li>
+
         <li>Mosquito común: 14 puntos</li>
+
         <li>Lugar de cría imbornal: 20 puntos</li>
+
         <li>Otro lugar de cría en la vía pública: 16 puntos</li>
+
     </ul>
 
-    <p>Además existen bonificaciones extra por el primer mosquito de la temporada, primer informe del día o por participar con frecuencia.</p>
+
+    <p>Además, existen bonificaciones extra por el primer mosquito de la temporada, el primer informe del día o por participar con frecuencia.</p>
+
 
     <p>Aquellos informes que se envíen como mosquito pero resulten no ser mosquitos, según la validación experta, no obtendrán puntos. Tampoco se puntuará una foto que no permita identificar el mosquito o lugar de cría.</p>
 
+
     <p>La acumulación de puntos te permitirá ir ascendiendo de <b>nivel</b>:</p>
+
     <ul>
-        <li>(1) principiante (novice)</li>
-        <li>(2) colaborador (contributor)</li>
-        <li>(3) experto (expert) </li>
-        <li>(4) maestro (master)</li>
-        <li>(5) gran maestro (grandmaster)</li>
+
+        <li>(1) principiante (<em>beginner</em>)</li>
+
+        <li>(2) colaborador (<em>contributor</em>)</li>
+
+        <li>(3) experto (<em>expert</em>) </li>
+
+        <li>(4) maestro (<em>master</em>)</li>
+
+        <li>(5) gran maestro (<em>grandmaster</em>)</li>
+
     </ul>
+
 
     <p>Estos iconos indican el nivel alcanzado:</p>
 
+
     <img src="{% static "tigahelp/InfoScoring_half.png" %}" width="100%">
+
 
     <h2>Panel de puntos</h2>
 
+
     <p>Se accede al ránking global haciendo clic sobre la puntuación en la pantalla principal. Presionando sobre una posición del ránking se despliega el desglose de puntos obtenidos por el usuario.</p>
+
 
     <p>Haciendo clic en “Más detalles” se accede al panel de puntos desglosado.</p>
 
+
     <p>En este apartado hay una lista de los informes enviados con la puntuación obtenida en cada uno de ellos. Los informes son interactivos, al clicar se obtiene la puntuación desglosada y el porqué de la puntuación.</p>
+
+
+
+
+    </div>
+
+</div>
 
 {% endblock %}
 
