--- a/tigahelp/templates/tigahelp/project_about_en.html
+++ b/tigahelp/templates/tigahelp/project_about_en.html
@@ -34,7 +34,7 @@
 
     <h2>Why is Mosquito Alert needed?</h2>
 
-    <p>In recent decades the number of invasive mosquitoes and emerging mosquito-borne diseases has increased on a global scale. New invasive species, mainly of the genus  <em> Aedes </em>, have settled in new areas and continue to expand. Aedes mosquitoes are important from a health perspective because of their ability to transmit diseases like dengue, Zika and chikungunya. Likewise, the common mosquito ( <em> Culex pipiens </em>) is important because it can transmit the West Nile virus. The risk mosquitoes pose to public health makes it important to monitor their populations.</p>
+    <p>In recent decades the number of invasive mosquitoes and emerging mosquito-borne diseases has increased on a global scale. New invasive species, mainly of the genus Aedes , have settled in new areas and continue to expand. Aedes mosquitoes are important from a health perspective because of their ability to transmit diseases like dengue, Zika and chikungunya. Likewise, the common mosquito (Culex pipiens) is important because it can transmit the West Nile virus. The risk mosquitoes pose to public health makes it important to monitor their populations.</p>
 
 
 <p>Given the complexity of the problem, Mosquito Alert opens up mosquito surveillance and research to the public, allowing collaboration between different actors through its app and its other platforms and communities.</p>
@@ -62,7 +62,7 @@
     </p>
 
 
-<p>Mosquito Alert also collects the approximate locations of participants’ devices, sampling these locations at 5 random times each day unless the participant has opted out of this. Locations are masked on a grid of 0.025 x 0.025 degrees latitude and longitude (approximately 2x2 km) before being sent to the Mosquito Alert server. For privacy reasons, only the grid square identifier is actually shared with Mosquito Alert, not the precise location. This information is highly valuable from a scientific perspective, as it enables researchers to make better estimates about mosquito populations, distinguishing, for example, places with few mosquitoes from places with few participants (but potentially many mosquitoes). Participant locations provide information about what is known in ecology as the sampling effort.</p>
+<p>Mosquito Alert also collects the approximate locations of participants' devices, sampling these locations at 5 random times each day unless the participant has opted out of this. Locations are masked on a grid of 0.025 x 0.025 degrees latitude and longitude (approximately 2x2 km) before being sent to the Mosquito Alert server. For privacy reasons, only the grid square identifier is actually shared with Mosquito Alert, not the precise location. This information is highly valuable from a scientific perspective, as it enables researchers to make better estimates about mosquito populations, distinguishing, for example, places with few mosquitoes from places with few participants (but potentially many mosquitoes). Participant locations provide information about what is known in ecology as the sampling effort.</p>
 
 
 <p class="centeredImage">
