--- a/tigahelp/templates/tigahelp/scoring_ca.html
+++ b/tigahelp/templates/tigahelp/scoring_ca.html
@@ -8,41 +8,86 @@
 
 {% block content %}
 
-    <h1>INFO PUNTUACIÓ</h1>
-    <p>Les accions realitzades a Mosquito Alert ténen reconeixement i recompensa en forma de punts. El nombre de punts per informe varia en funció de la informació aportada i de la seva qualitat.</p>
+<div class='main_container'>
+
+    <div class='text_container'>
+
+
+        <div class="center">
+
+            <h1></h1>
+
+        </div>
+
+
+
+
+    <h2>INFO PUNTUACIÓ </h2>
+
+    <p>Les accions realitzades en Mosquito Alert tenen reconeixement i recompensa en forma de punts. El nombre de punts per informe varia en funció de la informació aportada i de la seva qualitat.</p>
+
 
     <p>Els punts màxims que es poden obtenir per informe són:</p>
+
     <ul>
+
         <li>Mosquit <em>Aedes</em> invasor: 20 punts</li>
+
         <li>Mosquit comú: 14 punts</li>
+
         <li>Lloc de cria embornal: 20 punts</li>
+
         <li>Un altre lloc de cria en la via pública: 16 punts</li>
+
     </ul>
 
-    <p>A més existeixen bonificacions extra pel primer mosquit de la temporada, primer informe del dia o per participar amb freqüència.</p>
+
+    <p>A més, existeixen bonificacions extra pel primer mosquit de la temporada, primer informe del dia o per participar amb freqüència.</p>
+
 
     <p>Aquells informes que s'enviïn com a mosquit però resultin no ser mosquits, segons la validació experta, no obtindran punts. Igual que tampoc es puntuarà una foto que no permet identificar el mosquit o lloc de cria.</p>
 
-    <p>L'acumulació de punts et permetrà anar ascendint de <strong>nivell</strong>:</p>
+
+    <p>L'acumulació de punts et permetrà anar ascendint de <b>nivell</b>:</p>
+
     <ul>
-        <li>(1) principiant (novice)</li>
-        <li>(2) col·laborador (contributor)</li>
-        <li>(3) expert (expert)</li>
-        <li>(4) mestre (màster)</li>
-        <li>(5) gran mestre (grandmaster)</li>
+
+        <li>(1) principiant (<em>beginner</em>)</li>
+
+        <li>(2)  col·laborador (<em>contributor</em>)</li>
+
+        <li>(3) Expert (<em>expert</em>)</li>
+
+        <li>(4) Mestre (<em>master</em>)</li>
+
+        <li>(5) Gran mestre (<em>grandmaster</em>)</li>
+
     </ul>
 
-    <p>Aquestes icones indiquen el nivell assolit:</p>
+
+    <p>Aquestes icones indiquen el nivell assolit.</p>
+
 
     <img src="{% static "tigahelp/InfoScoring_half.png" %}" width="100%">
 
+
     <h2>Panell de punts</h2>
+
 
     <p>S’accedeix al rànquing global fent clic sobre la puntuació en la pantalla principal. Pressionat sobre una posició del rànquing es desplega el desglossament de punts obtinguts per l’usuari.</p>
 
+
     <p>Fent clic en “Més detalls” s’accedeix al panell de punts desglossat.</p>
 
+
     <p>En aquest apartat hi ha una llista dels informes enviats amb la puntuació obtinguda en cadascun d’ells. Els informes són interactius, en clicar s’obté la puntuació detallada i el perquè de la puntuació.</p>
+
+
+
+
+    </div>
+
+</div>
 
 {% endblock %}
 
