--- a/tigahelp/templates/tigahelp/scoring_en.html
+++ b/tigahelp/templates/tigahelp/scoring_en.html
@@ -8,7 +8,11 @@
 
 {% block content %}
 
-    <h1>SCORE INFO</h1>
+<div class='main_container'>
+
+    <div class='text_container'>
+
+    <h2>SCORE INFO</h2>
     <p>Actions taken in Mosquito Alert have recognition and rewards in the form of points. The number of points per report varies depending on the information provided and its quality.</p>
 
     <p>The maximum points that can be obtained per report are:</p>
@@ -25,7 +29,7 @@
 
     <p>The accumulation of points will allow you to go up a <b>level</b>:</p>
     <ul>
-        <li>(1) Novice (novice)</li>
+        <li>(1) Novice (beginner)</li>
         <li>(2) Contributor (contributor)</li>
         <li>(3) Expert (expert)</li>
         <li>(4) Master (master)</li>
@@ -44,4 +48,6 @@
 
     <p>In this section there is a list of the reports sent with the score obtained in each one of them. The reports are interactive, by clicking you get the broken down score and why the score.</p>
 
+    </div>
+</div>
 {% endblock %}
